// Generated file
package cop1.protobuf;

enum DecoderType {
  A = 1;
  B = 2;
}
